# discord

./: discord.opam  dune-project
src/: bot.ml  bot.mli  discord.ml  dune  event.ml  internal_state.ml  internal_state.mli  login.ml  login.mli  message.ml  message.mli  router.ml  router.mli  ws.ml
src/commands/: dune  heartbeat.ml  heartbeat.mli  identify.ml  identify.mli  request_guild_members.ml  request_guild_members.mli  resume.ml  resume.mli  status_update.ml  status_update.mli  voice_state_update.ml  voice_state_update.mli
src/data/: activity.ml  activity.mli  allowed_mention.ml  allowed_mention.mli  attachment.ml  attachment.mli  audit_log.ml  audit_log.mli  ban.ml  ban.mli  channel.ml  channel.mli  connection.ml  connection.mli  dune  embed.ml  embed.mli  emoji.ml  emoji.mli  events.ml  events.mli  followed_channel.ml  followed_channel.mli  guild.ml  guild.mli  guild_preview.ml  guild_preview.mli  integration.ml  integration.mli  invite.ml  invite.mli  message.ml  message.mli  overwrite.ml  overwrite.mli  payload.ml  payload.mli  presence_update.ml  presence_update.mli  reaction.ml  (+19 more)
src/data/basics/: bitfield.ml  bitfield.mli  dune  duration.ml  duration.mli  enum.ml  image_hash.ml  image_hash.mli  json.ml  json.mli  nonce.ml  nonce.mli  permissions.ml  (+9 more)
src/events/: dune  hello.ml  hello.mli  invalid_session.ml  invalid_session.mli  ready.ml  ready.mli
src/latch/: dune  latch.ml  latch.mli
src/objects/: dune
src/rest/: call.ml  call.mli  channel.ml  channel.mli  dune  emoji.ml  emoji.mli  gateway.ml  gateway.mli  guild.ml  guild.mli  user.ml  user.mli
