opam-version: "2.0"
maintainer: "SGrondin"
authors: [
  "SGrondin"
]
synopsis: "SGrondin"
description: """
Extensible OCaml framework to create Discord bots.
"""
license: "MPLv2"
tags: []
homepage: "https://github.com/SGrondin/discord"
dev-repo: "git://github.com/SGrondin/discord"
doc: "https://github.com/SGrondin/discord"
bug-reports: "https://github.com/SGrondin/discord/issues"
depends: [
  "ocaml" { >= "4.08.0"}
  "dune" { >= "2.0.0"}

  "core" { >= "v0.14.0" }
  "ppx_expect" { with-test }

  "lwt" { >= "5.2.0" & < "6.0.0" }
  "lwt_ppx" { >= "2.0.1" & < "3.0.0" }

  "cohttp" { >= "2.5.4" & < "3.0.0"}
  "cohttp-lwt-unix" { >= "2.5.4" & < "3.0.0"}
  "cohttp-lwt-jsoo" { >= "2.5.4" & < "3.0.0"}

  "yojson"
  "ppx_deriving_yojson"

  "tls"

  "websocket"
  "websocket-lwt-unix"

  "zarith"
]
build: ["dune" "build" "-p" name "-j" jobs]
