(library
  (name discord)
  (public_name discord)
  (inline_tests)
  (libraries
    data
    commands
    rest

    cohttp-lwt-unix
    core
    lwt
    lwt.unix
    ppx_deriving_yojson.runtime
    yojson
    websocket
    websocket-lwt-unix
  )
  (preprocess (pps
    ppx_jane
    lwt_ppx
    ppx_deriving.enum
    ppx_deriving_yojson
  ))
)
